--- a/index.html
+++ b/index.html
@@ -841,13 +841,8 @@
             </div>
 
             <div id="secretMessage" class="secret-message glass hidden">
-                <h3>Maluk <i class="fas fa-heart" style="font-size: 0.8em; color: var(--primary);"></i></h3>
-                <p>azyk ya malak lw 3rfty tfty el Message de yb2a lsa fakra hagat, malak ana lsa bahbk lsa 3ndy aml hata wnty m2afla kul haga.</p> 
-                <p>enty 3rfteny f zrof sa3ba msh awl ma nbd2 nzbt nfsna wnfkr bgd nb3d bshola kda mynf3sh, 2ultely hashel elblock mn sa3tha wna bhawl aklmk wna msh 3arf ya malak fe klam kter 3awz a2ulhulk w fe klam aktr 3awz asm3o mnk.</p>
-                <p>ahna msh kda ya malak ahna mlnash da3wa bhd ahna mkansh lena gher ba3d ya malak msh ay kelmten tt2al t2lb eledonya kda.</p>
-                <p>khaleky 3arfa eny hafdl ahbk ya malak da bs ely 3awzk t3rafeh w enty kunty malya 3eny wna mumkn mkontsh 3arf a3br 3la da sam7eny b3d aznk. lw msm7any ya malak hastna call mnk atmn 3liky bs.</p>
-                <p>ana kunt bahbk w lsa bahbk w msh 3arf ma7bkesh.</p>
-                <p class="signature">Forever yours.</p>
+                <h3>I tried, but you didn't want to.<i class="fas fa-heart" style="font-size: 0.8em; color: var(--primary);"></i></h3>
+                <p class="signature">ended- fokk mn kul haga this just a history</p>
             </div>
         </div>
     </section>
@@ -1029,3 +1024,4 @@
     </script>
 </body>
 </html>
+
