--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-        <source src="https://github.com/voranixx/CC-BOT/raw/refs/heads/main/Amr%20Diab%20-%20Makanak%20Fe%20Alby%20(Official%20Lyric%20Video)%20%20(%D9%83%D9%84%D9%85%D8%A7%D8%AA)%20%D8%B9%D9%85%D8%B1%D9%88%20%D8%AF%D9%8A%D8%A7%D8%A8%20-%20%D9%85%D9%83%D8%A7%D9%86%D9%83%20%D9%81%D9%8A%20%D9%82%D9%84%D8%A8%D9%8A%20-%20Amr%20Diab_%5Bcut_263sec%5D.mp3" type="audio/mpeg">
+        <source src="https://github.com/voranixx/mm/raw/refs/heads/main/Baedt%20Leh%20-%20Amr%20Diab.mp3" type="audio/mpeg">
     </audio>
 
     <script>
@@ -1024,4 +1024,5 @@
     </script>
 </body>
 </html>
+
 
